--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
         android:id="@+id/numberText"
         android:layout_width="284dp"
         android:layout_height="51dp"
-        android:hint="Insert your number!"
+        android:hint="@string/insert_your_number"
         android:maxLines="1"
-        android:autofillHints="Insert your number!"
+        android:autofillHints="@string/insert_your_number"
         android:inputType="numberDecimal"
         android:textColor="#3F51B5"
         android:outlineAmbientShadowColor="@color/black"
@@ -34,5 +34,11 @@
         app:layout_constraintLeft_toRightOf="@id/numberText"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerRoots"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/numberText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
