--- a/app/src/main/res/layout/one_calculation_activity.xml
+++ b/app/src/main/res/layout/one_calculation_activity.xml
@@ -33,6 +33,14 @@
         app:srcCompat="@android:drawable/ic_delete"
         android:contentDescription="@string/delete_calculation" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="359dp"
+        android:layout_height="21dp"
+        android:layout_marginStart="12dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/showNumberText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
