--- a/app/src/main/res/layout/one_calculation_activity.xml
+++ b/app/src/main/res/layout/one_calculation_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/calculationRow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,36 +10,26 @@
     <TextView
         android:id="@+id/showNumberText"
         android:layout_width="367dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="4dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
         android:gravity="top"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.163" />
+        app:layout_constraintVertical_bias="0.0" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <ImageButton
         android:id="@+id/deleteButton"
-        android:layout_width="27dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="310dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:contentDescription="@string/delete_calculation"
+        app:elevation="6dp"
         app:layout_constraintBottom_toBottomOf="@+id/showNumberText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@+id/showNumberText"
-        app:srcCompat="@android:drawable/ic_delete"
-        android:contentDescription="@string/delete_calculation" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="359dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="12dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/showNumberText" />
-
+        app:layout_constraintVertical_bias="0.521"
+        app:srcCompat="@android:drawable/ic_delete" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
